# toy-sae

./: .gitignore  pyproject.toml
scripts/: run_small_exp.sh  run_sweep.sh
tests/: test_dataset.py  test_score.py
toy_sae/: SCRATCH.py  dataset_generation.py  dictionary_score.py  run_experiment.py  run_sweep.py  sae.py  trainer.py
