[tool.poetry]
name = "toy-sae"
version = "0.1.0"
description = ""
authors = ["Ian McKenzie <ianmck98@gmail.com>"]
readme = "README.md"
packages = [{include = "toy_sae"}]

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
wandb = "^0.16.4"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
